# Travailleur

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.py  build_release.py
DummyProject/: CMakeLists.txt  DummyApp1.cpp  DummyApp1.h  DummyApp2.cpp  DummyApp2.h  main.cpp
TravailleurFramework/: CMakeLists.txt
TravailleurFramework/Common/: CStringVector.cpp  CStringVector.h  Chronometer.h  ColorUtils.cpp  ColorUtils.h  Date.cpp  Date.h  DelayUtils.cpp  DelayUtils.h  FilesystemUtils.cpp  FilesystemUtils.h  HexUtils.cpp  HexUtils.h  HotkeyHandler.cpp  HotkeyHandler.h  Image.cpp  Image.h  ImageUtils.cpp  ImageUtils.h  KeyboardAndMouseDefs.h  KeyboardAndMouseUtils.cpp  KeyboardAndMouseUtils.h  Point2D.h  Point2DPersistenceUtils.cpp  Point2DPersistenceUtils.h  Rectangle2D.h  Rectangle2DPersistenceUtils.cpp  Rectangle2DPersistenceUtils.h  SimplePersistenceUtils.cpp  SimplePersistenceUtils.h  SimpleTimer.cpp  SimpleTimer.h  StringParsingUtils.cpp  StringParsingUtils.h  StringUtils.cpp  StringUtils.h  TravailleurUtils.cpp  TravailleurUtils.h
TravailleurFramework/Common/old/CStringVector/: CStringVector.cpp  CStringVector.h
TravailleurFramework/Common/old/DebugTimer/: DebugTimer.cpp  DebugTimer.h
TravailleurFramework/Common/old/FileLog/: FileLog.cpp  FileLog.h
TravailleurFramework/Common/old/ImGuiWrappers/BigListSelector/: BigListSelector.cpp  BigListSelector.h
TravailleurFramework/Common/old/ImGuiWrappers/ImConsole/: ImConsole.cpp  ImConsole.h
TravailleurFramework/Common/old/ImGuiWrappers/ImLog/: ImLog.cpp  ImLog.h
TravailleurFramework/Common/old/ImGuiWrappers/StringVectorShower/: StringVectorShower.cpp  StringVectorShower.h
TravailleurFramework/Common/old/ImGuiWrappers/TreeLikeStructure/: TreeLikeStructure.cpp  TreeLikeStructure.h
TravailleurFramework/Common/old/ImGuiWrappers/generic-imgui-wrappers/: generic_imgui_wrappers.cpp  generic_imgui_wrappers.h
TravailleurFramework/Common/old/KeyboardHandler/: KeyboardHandler.cpp  KeyboardHandler.h  KeyboardHandler_fwd.h
TravailleurFramework/Common/old/RGBAColor/: NaiveRGBAColor.h  RGBAColor.h  test.cpp
TravailleurFramework/Common/old/SimpleTrie/: SimpleTrie.cpp  SimpleTrie.h
TravailleurFramework/Common/old/common_functions/: common_functions.cpp  common_functions.h
TravailleurFramework/Common/old/keyboard_check/: keyboard_check.cpp  keyboard_check.h
TravailleurFramework/Common/old/roby_assert/: roby_assert.h
TravailleurFramework/Common/old/roby_definitions/: roby_definitions.h
TravailleurFramework/Common/unittests/: CMakeLists.txt  StringParsingUtilsUnitTests.cpp  StringUtilsUnitTests.cpp  main.cpp
TravailleurFramework/Core/: CaptureHandler.cpp  CaptureHandler.h  DesktopFrameGrabber.cpp  DesktopFrameGrabber.h  ImageOCR.cpp  ImageOCR.h  ImageOCRUtils.cpp  ImageOCRUtils.h  ImageOCRsHandler.cpp  ImageOCRsHandler.h  ImagePattern.cpp  ImagePattern.h  ImagePattern_optimizations.cpp  ImagePatternsHandler.cpp  ImagePatternsHandler.h  ImagePreprocessing.cpp  ImagePreprocessing.h  ImagePreprocessingStep.cpp  ImagePreprocessingStep.h  ImagePreprocessingUtils.cpp  ImagePreprocessingUtils.h  ImagePreprocessingsHandler.cpp  ImagePreprocessingsHandler.h  ImageResource.cpp  ImageResource.h  ImageResourcesHandler.cpp  ImageResourcesHandler.h  InterfaceConfig.cpp  InterfaceConfig.h  MainAppWindow.cpp  MainAppWindow.h  PointInput.cpp  PointInput.h  PointInputHandler.cpp  PointInputHandler.h  RectangularRegion.cpp  RectangularRegion.h  RectangularRegionsHandler.cpp  RectangularRegionsHandler.h  TravailleurApp.cpp  (+7 more)
TravailleurFramework/Core/unittests/: CMakeLists.txt  ImagePatternOptimizationUnitTests.cpp  ImagePatternUnitTests.cpp  main.cpp
TravailleurFramework/ImGuiWrappers/: ImGuiCheckbox.cpp  ImGuiCheckbox.h  ImGuiColorOutput.cpp  ImGuiColorOutput.h  ImGuiColorSelector.cpp  ImGuiColorSelector.h  ImGuiCombo.cpp  ImGuiCombo.h  ImGuiConsole.cpp  ImGuiConsole.h  ImGuiDoubleSlider.cpp  ImGuiDoubleSlider.h  ImGuiHSVRangeInput.cpp  ImGuiHSVRangeInput.h  ImGuiImageButtonHandler.cpp  ImGuiImageButtonHandler.h  ImGuiImageEditor.cpp  ImGuiImageEditor.h  ImGuiImageRenderer.cpp  ImGuiImageRenderer.h  ImGuiIntInput.cpp  ImGuiIntInput.h  ImGuiIntSlider.cpp  ImGuiIntSlider.h  ImGuiPointInput.cpp  ImGuiPointInput.h  ImGuiSimpleColorSelector.cpp  ImGuiSimpleColorSelector.h  ImGuiSimpleDoubleSlider.cpp  ImGuiSimpleDoubleSlider.h  ImGuiSimpleIntRectangleSlider.cpp  ImGuiSimpleIntRectangleSlider.h  ImGuiSimpleIntSlider.cpp  ImGuiSimpleIntSlider.h  ImGuiSingleSelectionList.cpp  ImGuiSingleSelectionList.h  ImGuiTextInput.cpp  ImGuiTextInput.h  ImGuiTextOutput.cpp  ImGuiTextOutput.h  (+3 more)
TravailleurFramework/OpenCVUtils/: OpenCVUtils.cpp  OpenCVUtils.h
